kubernetes-manifests/customer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: artistefx/customer-service:latest  # Make sure this matches
          ports:
            - containerPort: 8080  # Your service port
          imagePullPolicy: Never
