kubernetes-manifests/customer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer-service
  ports:
    - protocol: TCP
      port: 80         # Port exposed by the service
      targetPort: 8080 # Port on which the container is listening
      name: http
  type: LoadBalancer
