kubernetes-manifests/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 80         # Port exposed by the service
      targetPort: 8081 # Port on which the container is listening
      name: http
  type: LoadBalancer
