kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Adjust the capture group if necessary
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /customers(/|$)(.*)
            pathType: ImplementationSpecific  # Change to ImplementationSpecific
            backend:
              service:
                name: customer-service
                port:
                  number: 80
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific  # Change to ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 80
